# adpt_crtl

./: .gitignore
scripts/: analyze_chattering.py  plot_manual_adaptive.py  plot_manual_tracking.py  plot_robot2dof.py
src/: 2dof_robot_adpt.cpp  4dof_robot_adpt_manual.cpp  CMakeLists.txt  lin_ss_adpt.cpp  mimo_lqr_adpt.cpp  nonlin_pendulum_adpt.cpp  plot_mimo.py  plot_pendulum.py  plot_results.py  plot_robot2dof.py  test_regressor.cpp  test_torques.cpp  verify_regressor.cpp
urdf/: open_x.urdf
